# analysis-templates

./: CMakeLists.txt  README.md  package.xml
src/: video_analysis.cpp
