<package>
  <name>freeplay_sandbox_analysis_template</name>
  <version>0.1.0</version>
  <description>Template to perform data analysis on the PInSoRo dataset</description>
  <maintainer email="severin.lemaignan@plymouth.ac.uk">Séverin Lemaignan</maintainer>

  <license>BSD</license>

  <author>Séverin Lemaignan</author>

  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_geometry</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rosbag</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosnode</run_depend>
</package>
